GtkIMContextSimple: export _gtk_check_compact_table() and GtkComposeTable

Some functions need to be exported if X11 compose files are loaded.

https://bugzilla.gnome.org/show_bug.cgi?id=721120